--- a/styles.css
+++ b/styles.css
@@ -13,29 +13,33 @@ header{
     /* position: fixed; */
     top: 0;
     left: 0;
-    background-color: #000000;
+    background-color: #0C0E0D;
     color: #fff;
-    min-height: 100vh;
+    /* min-height: 100vh; */
+    width: 200px;
+    height: 100vh;
     padding: 15px;
     text-align: center;
 }
 .sag{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
 }
 #logo{
-    width: 100px;
+    width: 150px;
 }
 .logo{
     margin-bottom: 25px;
 }
 
 #music,#genre,#record,#playlist,#heart,#pod{
-    margin-bottom: 15px;
+    width: 150px;
+    margin-bottom: 20px;
     position: relative;
     border: 1px solid #fff;
-    padding: 8px;
+    padding: 10px;
     border-radius: 20px;
     display: flex;
     justify-content: space-evenly;
@@ -51,7 +55,7 @@ header{
 .flex-icon{
     display: flex;
     justify-content: space-between;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 .info-init{
     display: block;
@@ -78,6 +82,8 @@ main {
 
 .main-container {
     width: 100vw;
+    display: flex;
+    flex-direction: column;
 }
 .searchDiv{
     height: 75px;
@@ -95,6 +101,7 @@ main {
     padding: 5px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .toggle-button {
@@ -106,6 +113,10 @@ main {
 
 #toggle-icon {
     color: white;
+    border: 1px solid red;
+    width: 20px;
+    height: 20px;
+
 }
 
 .search-bar {
@@ -135,14 +146,13 @@ main {
     display: flex;
     align-items: center;
     justify-content: space-between;
-
 }
 
 .profile{
     width: 40px;
     height: 40px;
     background-color: #12CB9E;
-    border:  px solid #12CB9E;
+    border: px solid #12CB9E;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -151,4 +161,54 @@ main {
 
 #user {
     color: white;
+}
+
+/** bottom div **/
+footer{
+    width: 100vw;
+    height: 100px;
+    position: fixed; bottom: 0; 
+    background-color: #000;
+    color: white;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    padding: 20px 0;
+    
+}
+
+.companyLogo {
+    width: 200px;
+    height: 70px;
+    /* border-radius: 50px; */
+    background-color:#151414;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.songInfo {
+    width: 500px;
+    height: 50px;
+    padding: 20px;
+    border-radius: 50px;
+    background-color: #151414;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#Lyrics {
+    color: #707070;
+}
+
+.controls {
+    width: 200px;
+    height: 50px;
+    /* background-color: #151414; */
+    border-radius: 50px;
+    border: 1px solid #12CB9E;
+    display: flex;
+    justify-content: space-evenly;;
+    align-items: center;
 }
